--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <option value="Americano">Americano</option>
             <option value="Europeo">Europeo</option>
             <option value="Asiático">Asiático</option>
-            <input type="text" id="model-input" />
           </select>
 
           <label for="year">Año:</label>
@@ -32,9 +31,9 @@
 
           <p>Tipo de seguro:</p>
           <input type="radio" name="type-s" id="basic" value="basic" />
-          <label for="basic">Básico</label>
+          <label id="basic" for="basic">Básico</label>
           <input type="radio" name="type-s" id="full" value="full" />
-          <label for="basic">Completo</label>
+          <label id="full" for="full">Completo</label>
 
           <button type="submit" class="btn">Cotizar</button>
         </form>
