--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <label for="model">Modelo:</label>
           <select name="models" id="models" required>
             <option value="defaulto">--Seleccione uno--</option>
-            <option value="Americano">Americano</option>
-            <option value="Europeo">Europeo</option>
-            <option value="Asiático">Asiático</option>
+            <option value="americano">Americano</option>
+            <option value="europeo">Europeo</option>
+            <option value="asiatico">Asiático</option>
           </select>
 
           <label for="year">Año:</label>
