Interfaz prototype done.

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           </select>
 
           <label for="year">Año:</label>
-          <select name="year" id="year">
+          <select name="year" id="years">
             <option value="defaulto">--Seleccione uno--</option>
           </select>
 
           <p>Tipo de seguro:</p>
-          <input type="radio" name="type-s" id="basic" value="basic" />
+          <input checked type="radio" name="type-s" id="basic" value="basic" />
           <label id="basic" for="basic">Básico</label>
           <input type="radio" name="type-s" id="full" value="full" />
           <label id="full" for="full">Completo</label>
