Done, need to do responsive.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
           <label id="basic" for="basic">Básico</label>
           <input type="radio" name="type-s" id="full" value="full" />
           <label id="full" for="full">Completo</label>
+          <iframe
+            src="https://giphy.com/embed/N256GFy1u6M6Y"
+            width="480"
+            height="319"
+            frameborder="0"
+            class="giphy-embed"
+            allowfullscreen
+          ></iframe>
 
           <button type="submit" class="btn">Cotizar</button>
         </form>
